@@ -40,6 +40,9 @@
   be created from this value.
 - fixed a deadlock issue with fork/wait with close being called on fork while
   in the middle of a read.
+- sleep I/O now uses the IOObject stored in the environment under %consol% as
+  the source for stdin/stdout (this is set to System.in and System.out by 
+  default).
 
 2.1-beta 4  (11 Sept 06)
 ===========
